--- a/inicioch.html
+++ b/inicioch.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Inicio Bolivia</title>
+    <title>Inicio Chile</title>
     <link href="estilospy.css" rel="stylesheet" type="text/css">
 </head>
 <link rel="icon" href="resources/chiband1.png">
